@@ -993,6 +993,7 @@ USING
 - (void)catUnsignedLong: (unsigned long)ulng;
 - (void)catLongLong: (long long)lnglng;
 - (void)catUnsignedLongLong: (unsigned long long)ulnglng;
+- (void)catPointer: (void *)ptr;
 @end
 
 @protocol InputStream <Create, Drop, CREATABLE>
